fix(mobile): Made mobile view a bit more readable.

--- a/style.css
+++ b/style.css
@@ -15,14 +15,26 @@ html {
   font-size: 24px;
   line-height: 1.5;
 }
-
 body {
   padding-top:40px;
-  padding-right:20%;
-  padding-left:20%;
+  padding-right:10%;
+  padding-left:10%;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+
+@media (max-width: 40em) {
+  html {
+    font-size: 16px;
+  }
+  body {
+    padding:5%;
+  }
+  h1 {
+    margin-top:0;
+  }
+}
+
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
